chore: DBMS를 MySQL에서 PostgreSQL로 변경 (#S12P11B101-80)

--- a/B101-back/src/main/resources/application.properties
+++ b/B101-back/src/main/resources/application.properties
@@ -4,16 +4,18 @@ server.port=8080
 
 
 #mysql ??
-spring.datasource.url=jdbc:mysql://localhost:3306/B101
+spring.datasource.hikari.maximum-pool-size=4
+spring.datasource.url=jdbc:postgresql://localhost:5432/B101
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 
 #jpa ??
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=postgresql
 #DB? ??? ?? ??? ???.
 spring.jpa.show-sql=true
 #???? ??? ??? ??
