--- a/B101-back/build.gradle
+++ b/B101-back/build.gradle
@@ -33,9 +33,9 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test' //security
     developmentOnly 'org.springframework.boot:spring-boot-devtools' // devtools 의존성
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'//swagger 의존성
-    runtimeOnly 'com.mysql:mysql-connector-j' //mysql
 
     annotationProcessor('org.projectlombok:lombok')
+    runtimeOnly 'org.postgresql:postgresql' //postgresql
 }
 
 tasks.named('test') {
